; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_syscalls.c___thr_fdatasync.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_syscalls.c___thr_fdatasync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pthread = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @__thr_fdatasync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__thr_fdatasync(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pthread*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call %struct.pthread* (...) @_get_curthread()
  store %struct.pthread* %5, %struct.pthread** %3, align 8
  %6 = load %struct.pthread*, %struct.pthread** %3, align 8
  %7 = call i32 @_thr_cancel_enter2(%struct.pthread* %6, i32 0)
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @__sys_fdatasync(i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load %struct.pthread*, %struct.pthread** %3, align 8
  %11 = call i32 @_thr_cancel_leave(%struct.pthread* %10, i32 1)
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}

declare dso_local %struct.pthread* @_get_curthread(...) #1

declare dso_local i32 @_thr_cancel_enter2(%struct.pthread*, i32) #1

declare dso_local i32 @__sys_fdatasync(i32) #1

declare dso_local i32 @_thr_cancel_leave(%struct.pthread*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
